--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
 src/app/environment.ts
+src/app/environment.prod.ts
 
 # Compiled output
 /dist
