--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,16 +27,24 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
+    - name: Create environment files from templates
+      run: |
+        cp src/app/environment.template.ts src/app/environment.ts
+        cp src/app/environment.prod.template.ts src/app/environment.prod.ts
+      
+    - name: Inject Firebase config into production environment
+      run: node inject-env.js
+      env:
+        FIREBASE_API_KEY: ${{ secrets.NG_ENV_FIREBASE_API_KEY }}
+        FIREBASE_AUTH_DOMAIN: ${{ secrets.NG_ENV_FIREBASE_AUTH_DOMAIN }}
+        FIREBASE_DATABASE_URL: ${{ secrets.NG_ENV_FIREBASE_DATABASE_URL }}
+        FIREBASE_PROJECT_ID: ${{ secrets.NG_ENV_FIREBASE_PROJECT_ID }}
+        FIREBASE_STORAGE_BUCKET: ${{ secrets.NG_ENV_FIREBASE_STORAGE_BUCKET }}
+        FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.NG_ENV_FIREBASE_MESSAGING_SENDER_ID }}
+        FIREBASE_APP_ID: ${{ secrets.NG_ENV_FIREBASE_APP_ID }}
+
     - name: Build Angular app
       run: npm run build -- --configuration=production --base-href="/cabbingov2/" --prerender=false
-      env:
-        FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
-        FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
-        FIREBASE_DATABASE_URL: ${{ secrets.FIREBASE_DATABASE_URL }}
-        FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
-        FIREBASE_STORAGE_BUCKET: ${{ secrets.FIREBASE_STORAGE_BUCKET }}
-        FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
-        FIREBASE_APP_ID: ${{ secrets.FIREBASE_APP_ID }}
       
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
