--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      # Write environment.prod.ts from secrets (no logs of secret values)
-      - name: Create Angular production environment
+      # Write environment files from secrets
+      - name: Create Angular environment files
         env:
           NG_APP_FIREBASE_API_KEY: ${{ secrets.NG_APP_FIREBASE_API_KEY }}
           NG_APP_FIREBASE_AUTH_DOMAIN: ${{ secrets.NG_APP_FIREBASE_AUTH_DOMAIN }}
@@ -38,34 +38,37 @@ jobs:
           NG_APP_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.NG_APP_FIREBASE_MESSAGING_SENDER_ID }}
           NG_APP_FIREBASE_APP_ID: ${{ secrets.NG_APP_FIREBASE_APP_ID }}
         run: |
-          node - <<'NODE'
-          const fs = require('fs');
-          const e = process.env;
-          const cfg = `export const environment = {
+          # Create environment.ts (dev version)
+          cat > src/app/environment.ts << 'EOF'
+          export const environment = {
+            production: false,
+            firebaseConfig: {
+              apiKey: "${{ secrets.NG_APP_FIREBASE_API_KEY }}",
+              authDomain: "${{ secrets.NG_APP_FIREBASE_AUTH_DOMAIN }}",
+              databaseURL: "${{ secrets.NG_APP_FIREBASE_DATABASE_URL }}",
+              projectId: "${{ secrets.NG_APP_FIREBASE_PROJECT_ID }}",
+              storageBucket: "${{ secrets.NG_APP_FIREBASE_STORAGE_BUCKET }}",
+              messagingSenderId: "${{ secrets.NG_APP_FIREBASE_MESSAGING_SENDER_ID }}",
+              appId: "${{ secrets.NG_APP_FIREBASE_APP_ID }}"
+            }
+          };
+          EOF
+          
+          # Create environment.prod.ts (production version)
+          cat > src/app/environment.prod.ts << 'EOF'
+          export const environment = {
             production: true,
             firebaseConfig: {
-              apiKey: "${e.NG_APP_FIREBASE_API_KEY}",
-              authDomain: "${e.NG_APP_FIREBASE_AUTH_DOMAIN}",
-              databaseURL: "${e.NG_APP_FIREBASE_DATABASE_URL}",
-              projectId: "${e.NG_APP_FIREBASE_PROJECT_ID}",
-              storageBucket: "${e.NG_APP_FIREBASE_STORAGE_BUCKET}",
-              messagingSenderId: "${e.NG_APP_FIREBASE_MESSAGING_SENDER_ID}",
-              appId: "${e.NG_APP_FIREBASE_APP_ID}"
+              apiKey: "${{ secrets.NG_APP_FIREBASE_API_KEY }}",
+              authDomain: "${{ secrets.NG_APP_FIREBASE_AUTH_DOMAIN }}",
+              databaseURL: "${{ secrets.NG_APP_FIREBASE_DATABASE_URL }}",
+              projectId: "${{ secrets.NG_APP_FIREBASE_PROJECT_ID }}",
+              storageBucket: "${{ secrets.NG_APP_FIREBASE_STORAGE_BUCKET }}",
+              messagingSenderId: "${{ secrets.NG_APP_FIREBASE_MESSAGING_SENDER_ID }}",
+              appId: "${{ secrets.NG_APP_FIREBASE_APP_ID }}"
             }
-          };`;
-          fs.writeFileSync('src/app/environment.prod.ts', cfg);
-          
-          // Also create regular environment.ts from template for the build
-          const devCfg = fs.readFileSync('src/app/environment.template.ts', 'utf8')
-            .replace(/YOUR_FIREBASE_API_KEY/g, "${e.NG_APP_FIREBASE_API_KEY}")
-            .replace(/YOUR_FIREBASE_AUTH_DOMAIN/g, "${e.NG_APP_FIREBASE_AUTH_DOMAIN}")
-            .replace(/YOUR_FIREBASE_DATABASE_URL/g, "${e.NG_APP_FIREBASE_DATABASE_URL}")
-            .replace(/YOUR_FIREBASE_PROJECT_ID/g, "${e.NG_APP_FIREBASE_PROJECT_ID}")
-            .replace(/YOUR_FIREBASE_STORAGE_BUCKET/g, "${e.NG_APP_FIREBASE_STORAGE_BUCKET}")
-            .replace(/YOUR_FIREBASE_MESSAGING_SENDER_ID/g, "${e.NG_APP_FIREBASE_MESSAGING_SENDER_ID}")
-            .replace(/YOUR_FIREBASE_APP_ID/g, "${e.NG_APP_FIREBASE_APP_ID}");
-          fs.writeFileSync('src/app/environment.ts', devCfg);
-          NODE
+          };
+          EOF
 
       # Optional: fail fast if DB URL is missing or clearly wrong
       - name: Sanity-check Firebase DB URL (masked)
