--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,32 +33,13 @@ jobs:
 
       - name: Replace Firebase config with secrets
         env:
-          NG_APP_FIREBASE_API_KEY: ${{ secrets.NG_APP_FIREBASE_API_KEY }}
-          NG_APP_FIREBASE_AUTH_DOMAIN: ${{ secrets.NG_APP_FIREBASE_AUTH_DOMAIN }}
-          NG_APP_FIREBASE_DATABASE_URL: ${{ secrets.NG_APP_FIREBASE_DATABASE_URL }}
-          NG_APP_FIREBASE_PROJECT_ID: ${{ secrets.NG_APP_FIREBASE_PROJECT_ID }}
-          NG_APP_FIREBASE_STORAGE_BUCKET: ${{ secrets.NG_APP_FIREBASE_STORAGE_BUCKET }}
-          NG_APP_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.NG_APP_FIREBASE_MESSAGING_SENDER_ID }}
-          NG_APP_FIREBASE_APP_ID: ${{ secrets.NG_APP_FIREBASE_APP_ID }}
-        run: |
-          # Replace placeholders in both files
-          sed -i "s/YOUR_FIREBASE_API_KEY/$NG_APP_FIREBASE_API_KEY/g" src/app/environment.ts
-          sed -i "s/YOUR_FIREBASE_AUTH_DOMAIN/$NG_APP_FIREBASE_AUTH_DOMAIN/g" src/app/environment.ts
-          sed -i "s|YOUR_FIREBASE_DATABASE_URL|$NG_APP_FIREBASE_DATABASE_URL|g" src/app/environment.ts
-          sed -i "s/YOUR_FIREBASE_PROJECT_ID/$NG_APP_FIREBASE_PROJECT_ID/g" src/app/environment.ts
-          sed -i "s/YOUR_FIREBASE_STORAGE_BUCKET/$NG_APP_FIREBASE_STORAGE_BUCKET/g" src/app/environment.ts
-          sed -i "s/YOUR_FIREBASE_MESSAGING_SENDER_ID/$NG_APP_FIREBASE_MESSAGING_SENDER_ID/g" src/app/environment.ts
-          sed -i "s/YOUR_FIREBASE_APP_ID/$NG_APP_FIREBASE_APP_ID/g" src/app/environment.ts
-          
-          # Also replace in prod file and set production: true
-          sed -i "s/YOUR_FIREBASE_API_KEY/$NG_APP_FIREBASE_API_KEY/g" src/app/environment.prod.ts
-          sed -i "s/YOUR_FIREBASE_AUTH_DOMAIN/$NG_APP_FIREBASE_AUTH_DOMAIN/g" src/app/environment.prod.ts
-          sed -i "s|YOUR_FIREBASE_DATABASE_URL|$NG_APP_FIREBASE_DATABASE_URL|g" src/app/environment.prod.ts
-          sed -i "s/YOUR_FIREBASE_PROJECT_ID/$NG_APP_FIREBASE_PROJECT_ID/g" src/app/environment.prod.ts
-          sed -i "s/YOUR_FIREBASE_STORAGE_BUCKET/$NG_APP_FIREBASE_STORAGE_BUCKET/g" src/app/environment.prod.ts
-          sed -i "s/YOUR_FIREBASE_MESSAGING_SENDER_ID/$NG_APP_FIREBASE_MESSAGING_SENDER_ID/g" src/app/environment.prod.ts
-          sed -i "s/YOUR_FIREBASE_APP_ID/$NG_APP_FIREBASE_APP_ID/g" src/app/environment.prod.ts
-          sed -i "s/production: false/production: true/g" src/app/environment.prod.ts
+          FIREBASE_API_KEY: ${{ secrets.NG_APP_FIREBASE_API_KEY }}
+          FIREBASE_AUTH_DOMAIN: ${{ secrets.NG_APP_FIREBASE_AUTH_DOMAIN }}
+          FIREBASE_DATABASE_URL: ${{ secrets.NG_APP_FIREBASE_DATABASE_URL }}
+          FIREBASE_PROJECT_ID: ${{ secrets.NG_APP_FIREBASE_PROJECT_ID }}
+          FIREBASE_STORAGE_BUCKET: ${{ secrets.NG_APP_FIREBASE_STORAGE_BUCKET }}
+          FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.NG_APP_FIREBASE_MESSAGING_SENDER_ID }}
+          FIREBASE_APP_ID: ${{ secrets.NG_APP_FIREBASE_APP_ID }}
 
       - name: Build Angular app
         run: |
