--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,9 @@ jobs:
         with:
           node-version: '22.12'
           cache: 'npm'
+      - run: node server.js
+        env: 
+          FIREBASE_DETAILS: '${{ secrets.FIREBASE_DETAILS }}'
 
       - name: Install dependencies
         run: npm ci
@@ -30,16 +33,6 @@ jobs:
       - name: Create environment files from templates  
         run: |
           cp src/app/environment.prod.ts src/app/environment.ts
-
-      - name: Replace Firebase config with secrets
-        env:
-          FIREBASE_API_KEY: ${{ secrets.NG_APP_FIREBASE_API_KEY }}
-          FIREBASE_AUTH_DOMAIN: ${{ secrets.NG_APP_FIREBASE_AUTH_DOMAIN }}
-          FIREBASE_DATABASE_URL: ${{ secrets.NG_APP_FIREBASE_DATABASE_URL }}
-          FIREBASE_PROJECT_ID: ${{ secrets.NG_APP_FIREBASE_PROJECT_ID }}
-          FIREBASE_STORAGE_BUCKET: ${{ secrets.NG_APP_FIREBASE_STORAGE_BUCKET }}
-          FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.NG_APP_FIREBASE_MESSAGING_SENDER_ID }}
-          FIREBASE_APP_ID: ${{ secrets.NG_APP_FIREBASE_APP_ID }}
 
       - name: Build Angular app
         run: |
