--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,6 @@ on:
     branches: [ main ]
 
 permissions:
-  contents: read
   contents: write
 
 jobs:
@@ -30,6 +29,10 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Move env files
+        run: |
+          cp src/app/environment.prod.ts src/app/environment.ts
 
       - name: Build Angular app
         run: |
