--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,11 +36,11 @@ jobs:
 
       - name: Build Angular app
         run: |
-          npm run build -- --configuration=production --base-href="/cabbingov2/"
+          npm run build -- --configuration=production --base-href="/cabbingo/"
           
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         if: github.ref == 'refs/heads/main'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist/cabbingov2/browser
+          publish_dir: ./dist/cabbingo/browser
