--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "firebase": "^11.10.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.0",
+    "http-proxy-middleware": "^3.0.0"
   },
   "devDependencies": {
     "@angular/build": "^20.1.6",
