--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "@angular/ssr": "^20.1.6",
     "express": "^5.1.0",
     "firebase": "^11.10.0",
+    "http-proxy-middleware": "^3.0.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0",
-    "http-proxy-middleware": "^3.0.0"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular/build": "^20.1.6",
